<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_ipm</name>
  <version>0.0.0</version>
  <description>Inverse Perspective Mapping Node for Image or Mask Topics</description>
  <maintainer email="git@flova.de">Florian Vahl</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ipm_library</exec_depend>
  <exec_depend>python3-numpyexec_</depend>
  <exec_depend>python3-opencvexec_</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
