<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soccer_ipm</name>
  <version>0.0.0</version>
  <description>Inverse perspctive mapping for the RoboCup soccer environment</description>
  <maintainer email="florian@flova.de">Florian Vahl</maintainer>
  <license>Apache License 2.0</license>

  <depend>ipm_library</depend>


  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>bitbots_docs</depend>
  <depend>python3-opencv</depend>

  <exec_depend>soccer_vision_2d_msgs</exec_depend>
  <exec_depend>humanoid_league_msgs</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
